k8s-specifications/database/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-namespace
  namespace: postgres

spec:
  podSelector:
    matchLabels:
      app: db

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vote

      podSelector:
        matchLabels:
          app: worker

    ports:
    - protocol: TCP
      port: 5432

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-result-to-db
  namespace: postgres

spec:
  podSelector:
    matchLabels:
      app: db

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: vote

      podSelector:
        matchLabels:
          app: result

    ports:
    - protocol: TCP
      port: 5432
